# PR_COLQUANT

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  color_quantization  orig.c  projekt.cu  results.txt  results_new.txt  sequential  sequential.c  test-time.sh  test-time2.sh  typedefs.c
